--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
-Package: r-sbpipe
+Package: sbpiper
 Type: Package
 Title: R functions for SBpipe package
 Version: 1.0
 Date: 2018-01-24
 Author: Piero Dalle Pezze
 Maintainer: Piero Dalle Pezze <piero.dallepezze@gmail.com>
-URL: https://pdp10.github.io/sbpipe
-BugReports: https://github.com/pdp10/r-sbpipe/issues
+URL: https://pdp10.github.io/sbpiper
+BugReports: https://github.com/pdp10/sbpiper/issues
 Depends: 
     R (>= 3.2.0)
 Imports:
