--- a/meta.yaml
+++ b/meta.yaml
@@ -16,12 +16,12 @@
 
 
 package:
-  name: r-sbpipe
+  name: sbpiper
   version: 1.0
 
 about:
   summary: R functions for SBpipe
-  home: https://github.com/pdp10/r-sbpipe
+  home: https://github.com/pdp10/sbpiper
   readme: README.md
   license: LGPL-3.0
   license_file: LICENSE
@@ -54,5 +54,5 @@ requirements:
         - r-scales
 test:
     commands:
-        - $R -e "library('r-sbpipe')"
+        - $R -e "library('sbpiper')"
 
