--- a/conda_recipe/meta.yaml
+++ b/conda_recipe/meta.yaml
@@ -20,7 +20,7 @@ package:
   version: 1.0.0
 
 source:
-  #git_tag: v1.0.0
+  #git_rev: v1.0.0
   #git_url: https://github.com/pdp10/sbpiper.git
   path: ../
   
@@ -39,9 +39,9 @@ build:
 
 requirements:
     build:
-        - r-essentials
+        #- r-essentials
     run:
-        - r-essentials      
+        #- r-essentials      
 test:
     commands:
         - $R -e "library('sbpiper')"
