--- a/conda_recipe/meta.yaml
+++ b/conda_recipe/meta.yaml
@@ -20,9 +20,9 @@ package:
   version: 1.0.0
 
 source:
-  #git_rev: v1.0.0
-  #git_url: https://github.com/pdp10/sbpiper.git
-  path: ../
+  git_rev: v1.0.0
+  git_url: https://github.com/pdp10/sbpiper.git
+  #path: ../
   
 about:
   summary: R functions for SBpipe
