--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@
 # along with sbpipe.  If not, see <http://www.gnu.org/licenses/>.
 
 language: r
+sudo: required
 cache: packages
 r:
   # We don't actually use the Travis R, but this keeps it organized.
