--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,7 +43,9 @@ export(scatterplot)
 export(scatterplot_log10)
 export(scatterplot_ple)
 export(scatterplot_w_colour)
+import(Hmisc)
 import(ggplot2)
+importFrom(colorRamps,matlab.like)
 importFrom(stats,density)
 importFrom(stats,median)
 importFrom(stats,qf)
