export summarise_data()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,6 +43,7 @@ export(scatterplot)
 export(scatterplot_log10)
 export(scatterplot_ple)
 export(scatterplot_w_colour)
+export(summarise_data)
 import(ggplot2)
 importFrom(colorRamps,matlab.like)
 importFrom(stats,density)
