--- a/environment.yaml
+++ b/environment.yaml
@@ -23,5 +23,10 @@ channels:
   - defaults
   - conda-forge  
 dependencies:
-  - r-essentials
+  - r-data.table,
+  - r-ggplot2 (>= 2.2.0),
+  - r-reshape2,
+  - r-scales,
+# - r-essentials
   - r-colorramps
+  
