--- a/conda_recipe/meta.yaml
+++ b/conda_recipe/meta.yaml
@@ -21,7 +21,7 @@ package:
   version: {{ version }}
 
 source:
-  git_rev: master
+  git_rev: develop
   git_url: https://github.com/pdp10/sbpiper.git
   #path: ../
   
@@ -39,20 +39,23 @@ build:
 
 requirements:
     build:
+        # r-colorramps is in conda-forge channel. Put this on top, so that 
+        # r-base will be reinstalled from the r channel when the following dependencies 
+        # will be parsed
+        - r-colorramps    
         - r-base=3.4.1
         - r-data.table
-        - r-ggplot2=2.2.1
+        - r-ggplot2>=2.2.0
         - r-reshape2
         - r-scales
-        - r-colorramps=2.3
         #- r-essentials       
     run:
+        - r-colorramps    
         - r-base=3.4.1    
         - r-data.table
-        - r-ggplot2=2.2.1
+        - r-ggplot2>=2.2.0
         - r-reshape2
         - r-scales
-        - r-colorramps=2.3
         #- r-essentials       
 test:
     commands:
