--- a/environment.yaml
+++ b/environment.yaml
@@ -23,11 +23,14 @@ channels:
   - defaults
   - conda-forge  
 dependencies:
+  # r-colorramps is in conda-forge channel. Put this on top, so that 
+  # r-base will be reinstalled from the r channel when the following dependencies 
+  # will be parsed
+  - r-colorramps
   - r-base=3.4.1
   - r-data.table
-  - r-ggplot2=2.2.1
+  - r-ggplot2>=2.2.0
   - r-reshape2
   - r-scales
-  - r-colorramps=2.3
   #- r-essentials
   
