added hmisc dependency

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,6 +44,7 @@ export(scatterplot_log10)
 export(scatterplot_ple)
 export(scatterplot_w_colour)
 export(summarise_data)
+import(Hmisc)
 import(ggplot2)
 importFrom(colorRamps,matlab.like)
 importFrom(stats,density)
