--- a/environment.yaml
+++ b/environment.yaml
@@ -27,6 +27,7 @@ dependencies:
   - r-data.table
   - r-ggplot2>=2.2.0
   - r-reshape2
+  - r-hmisc  
   - r-scales
   - r-colorramps  
   #- r-essentials
