#19 added sbpipe_pe() which is the main function called by native sbpipe

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(compute_fratio_threshold)
 export(compute_sampled_ple_stats)
 export(gen_stats_table)
 export(get_column_names_statistics)
+export(get_param_names)
 export(get_stats)
 export(histogramplot)
 export(leftCI)
@@ -33,6 +34,7 @@ export(rightCI)
 export(sbpipe_combine_param_ple_stats)
 export(sbpipe_objval_vs_iters_analysis)
 export(sbpipe_parameter_density_analysis)
+export(sbpipe_pe)
 export(sbpipe_pe_ds_preproc)
 export(sbpipe_ps1)
 export(sbpipe_ps2)
