removed redundant run_for_cran.sh file as the files to skip are in .Rbuildignore

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,1 +1,17 @@
+^.*\.Rproj$
+^\.Rproj\.user$
+^\.travis\.yml$
+^/\.gitattributes$
+^\.directory$
+^conda_recipe$
+^cran-comments.md$
 ^data-raw$
+^config\.yml$
+^environment\.yaml$
+^CODE_OF_CONDUCT\.md$
+^CONTRIBUTING\.md$
+^ISSUE_TEMPLATE\.md$
+^NEWS$
+^revdep$
+^README\.Rmd$
+^README-.*\.png$
