--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,10 @@ Package: sbpiper
 Version: 1.4.0
 Date: 2018-02-21
 Title: Data Analysis Functions for SBpipe Package
-Author: Piero Dalle Pezze
-Maintainer: Piero Dalle Pezze <piero.dallepezze@gmail.com>
+Authors@R: c(
+    person("Piero", "Dalle Pezze", email = "piero.dallepezze@gmail.com", role = c("aut", "cre")),
+    person("Nicolas", "Le Novère", email = "nicolas.lenovere@babraham.ac.uk", role = c("cph"))
+    )
 Depends: 
     R (>= 3.2.0)
 Imports:
