--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: sbpiper
 Version: 1.4.0
 Date: 2018-02-21
-Title: Data Analysis Functions for SBpipe Package
+Title: Data Analysis Functions for 'SBpipe' Package
 Authors@R: c(
     person("Piero", "Dalle Pezze", email = "piero.dallepezze@gmail.com", role = c("aut", "cre"), comment = c(ORCID = "0000-0003-1695-6763")),
     person("Nicolas", "Le Novère", email = "nicolas.lenovere@babraham.ac.uk", role = c("cph"), comment = c(ORCID = "0000-0002-6309-7327"))
@@ -18,8 +18,16 @@ Imports:
     scales,
     stats,
     utils
-Description: Data analysis functions for mathematical 
-    model simulation, parameter estimation, and parameter scan.
+Description: This package contains the functions used by the software 'SBpipe' for analysing 
+    repetitive parameter estimations and simulations of mathematical models. Examples 
+    of mathematical models are Ordinary Differential equations (ODEs) or 
+    Stochastic Differential Equations (SDEs) models. Among the analyses for parameter 
+    estimation 'sbpiper' calculates statistics and generates plots for parameter density, 
+    parameter profile likelihood estimations (PLEs), and 2D parameter PLEs. These results can 
+    be generated using all or a subset of the best computed parameter sets. Among the analyses 
+    for model simulation 'sbpiper' calculates statistics and generates plots for deterministic 
+    and stochastic time courses via cartesian and heatmap plots. Plots for the scan of one or two model 
+    parameters can also be generated.
 License: LGPL-3 | file LICENSE
 URL: https://github.com/pdp10/sbpiper
 BugReports: https://github.com/pdp10/sbpiper/issues
