--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,7 +18,7 @@ Imports:
     scales,
     stats,
     utils
-Description: This package contains the functions used by the software 'SBpipe' for analysing 
+Description: 'sbpiper' contains the functions used by the software 'SBpipe' for analysing 
     repetitive parameter estimations and simulations of mathematical models. Examples 
     of mathematical models are Ordinary Differential equations (ODEs) or 
     Stochastic Differential Equations (SDEs) models. Among the analyses for parameter 
