#26 first round of examples for PS2. This will fail on travis because of the calculation of tp (line 84) in sbpipe_ps2.r. A reasonable pattern matching is necessary here.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,6 +17,7 @@ Imports:
     reshape2,
     scales,
     stats,
+    stringr,
     utils
 Description: 'sbpiper' contains the functions used by the software 'SBpipe' for analysing 
     repetitive parameter estimations and simulations of mathematical models. Examples 
