#26 renamed sbpipe to sbpiper

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,16 +27,16 @@ export(plot_sep_sims)
 export(plot_single_param_scan_data)
 export(plot_single_param_scan_data_homogen)
 export(rightCI)
-export(sbpipe_combine_param_ple_stats)
-export(sbpipe_objval_vs_iters_analysis)
-export(sbpipe_parameter_density_analysis)
-export(sbpipe_pe)
-export(sbpipe_pe_ds_preproc)
-export(sbpipe_ps1)
-export(sbpipe_ps2)
-export(sbpipe_sampled_2d_ple_analysis)
-export(sbpipe_sampled_ple_analysis)
-export(sbpipe_sim)
+export(sbpiper_combine_param_ple_stats)
+export(sbpiper_objval_vs_iters_analysis)
+export(sbpiper_parameter_density_analysis)
+export(sbpiper_pe)
+export(sbpiper_pe_ds_preproc)
+export(sbpiper_ps1)
+export(sbpiper_ps2)
+export(sbpiper_sampled_2d_ple_analysis)
+export(sbpiper_sampled_ple_analysis)
+export(sbpiper_sim)
 export(scatterplot)
 export(scatterplot_log10)
 export(scatterplot_ple)
