--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: sbpiper
-Version: 1.4.0
-Date: 2018-02-21
+Version: 1.5.0
+Date: 2018-02-28
 Title: Data Analysis Functions for 'SBpipe' Package
 Authors@R: c(
     person("Piero", "Dalle Pezze", email = "piero.dallepezze@gmail.com", role = c("aut", "cre", "cph"), comment = c(ORCID = "0000-0003-1695-6763")),
@@ -35,12 +35,12 @@ BugReports: https://github.com/pdp10/sbpiper/issues
 LazyLoad: true
 Collate:
     'sbpiper.r'
-    'sbpipe_ggplot2_themes.r'
-    'sbpipe_plots.r'    
-    'sbpipe_sim.r'
-    'sbpipe_ps1.r'
-    'sbpipe_ps2.r'
-    'sbpipe_pe.r'
+    'sbpiper_ggplot2_themes.r'
+    'sbpiper_plots.r'    
+    'sbpiper_sim.r'
+    'sbpiper_ps1.r'
+    'sbpiper_ps2.r'
+    'sbpiper_pe.r'
     'data.r'
 RoxygenNote: 6.0.1
 Roxygen: list(markdown = TRUE)
