added clustering analysis

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(leftCI)
 export(normalise_vec)
 export(objval_vs_iters_analysis)
 export(parameter_density_analysis)
+export(parameter_pca_analysis)
 export(pe_ds_preproc)
 export(plot_comb_sims)
 export(plot_combined_tc)
