--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: sbpiper
-Version: 1.5.0
+Version: 1.6.0
 Date: 2018-02-28
 Title: Data Analysis Functions for 'SBpipe' Package
 Authors@R: c(
@@ -11,6 +11,7 @@ Depends:
 Imports:
     colorRamps,
     data.table,
+    factoextra,
     ggplot2 (>= 2.2.0),
     grDevices,
     Hmisc,
