--- a/conda_recipe/meta.yaml
+++ b/conda_recipe/meta.yaml
@@ -14,7 +14,7 @@
 # along with sbpiper.  If not, see <http://www.gnu.org/licenses/>.
 
 
-{% set version= '1.5.0' %}
+{% set version= '1.6.0' %}
 
 package:
   name: sbpiper
@@ -46,7 +46,8 @@ requirements:
         - r-hmisc        
         - r-scales
         - r-stringr
-        - r-colorramps        
+        - r-colorramps
+        - r-factoextra
         #- r-essentials       
     run:
         - r-base=3.4.2    
@@ -56,7 +57,8 @@ requirements:
         - r-hmisc
         - r-scales
         - r-stringr
-        - r-colorramps        
+        - r-colorramps
+        - r-factoextra
         #- r-essentials       
 test:
     commands:
