--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: sbpiper
 Version: 1.6.0
-Date: 2018-02-28
+Date: 2018-03-07
 Title: Data Analysis Functions for 'SBpipe' Package
 Authors@R: c(
     person("Piero", "Dalle Pezze", email = "piero.dallepezze@gmail.com", role = c("aut", "cre", "cph"), comment = c(ORCID = "0000-0003-1695-6763")),
@@ -11,6 +11,7 @@ Depends:
 Imports:
     colorRamps,
     data.table,
+    factoextra,
     ggplot2 (>= 2.2.0),
     grDevices,
     Hmisc,
@@ -27,7 +28,9 @@ Description: Provides an API for analysing repetitive parameter estimations and 
     be generated using all or a subset of the best computed parameter sets. Among the analyses 
     for model simulation 'sbpiper' calculates statistics and generates plots for deterministic 
     and stochastic time courses via cartesian and heatmap plots. Plots for the scan of one or two model 
-    parameters can also be generated. This package is primarily used by the software 'SBpipe'. Citation: Dalle Pezze P, Le Novère N. SBpipe: a collection of pipelines for automating repetitive simulation and analysis tasks. BMC Systems Biology. 2017;11:46. <doi:10.1186/s12918-017-0423-3>.
+    parameters can also be generated. This package is primarily used by the software 'SBpipe'. 
+    Citation: Dalle Pezze P, Le Novère N. SBpipe: a collection of pipelines for automating 
+    repetitive simulation and analysis tasks. BMC Systems Biology. 2017;11:46. <doi:10.1186/s12918-017-0423-3>.
 License: LGPL-3 | file LICENSE
 URL: https://github.com/pdp10/sbpiper
 BugReports: https://github.com/pdp10/sbpiper/issues
