--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,6 +12,7 @@ Imports:
     colorRamps,
     data.table,
     factoextra,
+    FactoMineR,
     ggplot2 (>= 2.2.0),
     grDevices,
     Hmisc,
@@ -23,8 +24,8 @@ Imports:
 Description: Provides an API for analysing repetitive parameter estimations and simulations of
     mathematical models. Examples of mathematical models are Ordinary Differential equations (ODEs) 
     or Stochastic Differential Equations (SDEs) models. Among the analyses for parameter 
-    estimation 'sbpiper' calculates statistics and generates plots for parameter density, 
-    parameter profile likelihood estimations (PLEs), and 2D parameter PLEs. These results can 
+    estimation 'sbpiper' calculates statistics and generates plots for parameter density, PCA of the best 
+    fits, parameter profile likelihood estimations (PLEs), and 2D parameter PLEs. These results can 
     be generated using all or a subset of the best computed parameter sets. Among the analyses 
     for model simulation 'sbpiper' calculates statistics and generates plots for deterministic 
     and stochastic time courses via cartesian and heatmap plots. Plots for the scan of one or two model 
