optimisation in the generation of statistics of model simulation time courses

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(compute_fratio_threshold)
 export(compute_sampled_ple_stats)
 export(gen_stats_table)
 export(histogramplot)
+export(kurtosis)
 export(leftCI)
 export(normalise_vec)
 export(objval_vs_iters_analysis)
@@ -43,6 +44,7 @@ export(scatterplot)
 export(scatterplot_log10)
 export(scatterplot_ple)
 export(scatterplot_w_colour)
+export(skewness)
 export(summarise_data)
 export(tc_theme)
 import(Hmisc)
