--- a/conda_recipe/meta.yaml
+++ b/conda_recipe/meta.yaml
@@ -39,9 +39,9 @@ build:
 
 requirements:
     build:
-        - r-base>=3.4.1
+        - r-base 3.4.*
         - r-data.table
-        - r-ggplot2>=2.2.0
+        - r-ggplot2 2.2.*
         - r-reshape2
         - r-hmisc  
         - r-scales
@@ -50,9 +50,9 @@ requirements:
         - r-factoextra
         - r-factominer
     run:
-        - r-base>=3.4.1
+        - r-base 3.4.*
         - r-data.table
-        - r-ggplot2>=2.2.0
+        - r-ggplot2 2.2.*
         - r-reshape2
         - r-hmisc  
         - r-scales
