--- a/environment.yaml
+++ b/environment.yaml
@@ -22,9 +22,9 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - r-base>=3.4.1
+  - r-base>=3.4.*
   - r-data.table
-  - r-ggplot2>=2.2.0
+  - r-ggplot2>=2.2.*
   - r-reshape2
   - r-hmisc  
   - r-scales
