--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,12 +51,15 @@ import(Hmisc)
 import(ggplot2)
 importFrom(colorRamps,matlab.like)
 importFrom(stats,density)
+importFrom(stats,mad)
 importFrom(stats,median)
 importFrom(stats,qf)
 importFrom(stats,qnorm)
 importFrom(stats,quantile)
 importFrom(stats,sd)
 importFrom(stats,var)
+importFrom(utils,combn)
 importFrom(utils,read.table)
 importFrom(utils,tail)
+importFrom(utils,write.csv)
 importFrom(utils,write.table)
