--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,9 @@
 Package: sbpiper
-Version: 1.6.0
-Date: 2018-03-21
+Version: 1.7.0
+Date: 2018-04-20
 Title: Data Analysis Functions for 'SBpipe' Package
 Authors@R: c(
-    person("Piero", "Dalle Pezze", email = "piero.dallepezze@gmail.com", role = c("aut", "cre", "cph"), comment = c(ORCID = "0000-0003-1695-6763")),
-    person("Nicolas", "Le Novère", email = "nicolas.lenovere@babraham.ac.uk", role = c("cph"), comment = c(ORCID = "0000-0002-6309-7327"))
+    person("Piero", "Dalle Pezze", email = "piero.dallepezze@gmail.com", role = c("aut", "cre", "cph"), comment = c(ORCID = "0000-0003-1695-6763"))
     )
 Depends: 
     R (>= 3.2.0)
